# mutex_benchmark

./: .gitignore  README.md  app.py  meson.build  unit-test.sh
apps/: meson.build
apps/grouped_contention_bench/: grouped_contention_bench.cpp  grouped_contention_bench.hpp  meson.build
apps/kc_cache_bench/: kc_cache_bench.cpp  kc_cache_bench.hpp  meson.build
apps/lru_workload_bench/: lru_workload_bench.cpp  lru_workload_bench.hpp  meson.build
apps/max_contention_bench/: max_contention_bench.cpp  max_contention_bench.hpp  meson.build  meson.build.sanitized
apps/min_contention_bench/: meson.build  min_contention_bench.cpp  min_contention_bench.hpp
apps/spike_contention_bench/: meson.build  spike_contention_bench.cpp  spike_contention_bench.hpp
cxl/: bakery_static_mutex.c  bakery_static_mutex.cpp  bl_static_mutex.c  bl_static_mutex.cpp  dijkstra_nonatomic_lock.cpp  emucxl_lib.h.gch  harness.cpp  harness.hpp  memtest.c  run.sh  test.c  test.cpp
cxl/lock/: burns_lamport_lock.cpp  dijkstra_nonatomic_lock.cpp  lock.hpp  spin_lock.cpp  trylock.hpp
data/notes/: 072925-1_2_3-local.txt  072925-8_2_3-cxl.txt  072925-8_2_3-vmlocal.txt  072925-8_2_4-local.txt  072925cxl_8_1_2.txt  072925local_8_1_2.txt  072925vmlocal_8_1_2.txt  073025-8_2_10-local-O3-WRONG.txt  073025-8_2_10-local-O3.txt  073025-8_2_10-local-debug.txt  073025-8_2_10-local-debugoptimized.txt  cxl_8_1_2.txt  cxl_all_cxl_4_01_20.txt  cxl_all_cxl_8_01_20.txt  cxl_all_cxl_8_01_4.txt  local_all_cxl_4_01_4.txt  localvm_all_cxl_08_01_20.txt  localvm_all_cxl_4_01_20.txt  localvm_all_cxl_8_01_4.txt
lib/: meson.build
lib/kyotocabinet/: kccachedb.h  kcdbext.h  kcdirdb.h  kchashdb.h  kcpolydb.h  kcprotodb.h  kcstashdb.h  kctextdb.h  kcthread.h  meson.build
lib/lock/: HCLH_lock.cpp  HMCS_lock.cpp  bakery_mutex.cpp  bakery_nonatomic_mutex.cpp  bakery_static_mutex.c  bakery_static_mutex.cpp  boost_lock.cpp  boulangerie.cpp  broken_lock.cpp  burns_lamport_lock.hpp  clh_lock.cpp  cohortMCS_lock.cpp  cohortPTicket_lock.cpp  cohortTAS_lock.cpp  cohortTicket_lock.cpp  cpp_std_mutex.cpp  dijkstra_lock.cpp  dijkstra_nonatomic_lock.cpp  dijkstra_nonatomic_sleeper_lock.cpp  dijxstra_lock.cpp  elevator_mutex.hpp  exp_spin_lock.cpp  futex_mutex.cpp  halfnode_lock.cpp  hardspin_lock.hpp  hbo_lock.cpp  hopscotch_local_lock.cpp  hopscotch_lock.cpp  hopscotch_noncachealigned_lock.cpp  hopscotch_static_lock.cpp  k42_lock.cpp  knuth_lock.cpp  knuth_sleeper_lock.cpp  lamport_lock.cpp  lamport_lock.hpp  lamport_sleeper_lock.cpp  linear_bl_elevator.cpp  linear_cas_elevator.cpp  linear_elevator.cpp  linear_elevator_nca.cpp  (+31 more)
lib/utils/: bench_utils.cpp  bench_utils.hpp  cxl_utils.cpp  cxl_utils.hpp  emucxl_lib.c  meson.build
scripts/: analyzer.py  args.py  builder.py  constants.py  dataloader.py  logger.py  main.py  plotter.py  runner.py
subprojects/: nsync.wrap
tests/: thread_sanitizer_test.sh
